fixed problems where long titles would overflow on content

--- a/src/webparts/test/Events.css
+++ b/src/webparts/test/Events.css
@@ -169,7 +169,7 @@ border-radius: 5px;
 .hero-event-content{
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 2.25rem 1fr auto 1rem auto auto;
+    grid-template-rows: auto 1fr auto 1rem auto auto;
     gap: .5rem;
     }
 
@@ -259,7 +259,7 @@ border-radius: 5px;
 .grid-event-content {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows:  1fr 2.25rem auto auto auto auto;
+    grid-template-rows:  1fr auto auto auto auto auto;
     border-radius: 5px;
     background: #ffffff;
     box-shadow: 5px 5px 11px #a1a1a1,
@@ -407,9 +407,10 @@ border-radius: 5px;
     grid-row: 3;
 }
 
-
 /*########################################*/
 
-
+.add-event-text-field{
+    width: 80%;
+}
 
 
